--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "babel-core": "^5.5.3",
+    "babel-eslint": "^3.1.13",
     "babel-loader": "^5.1.4",
     "chai": "^3.0.0",
+    "eslint": "^0.22.1",
+    "eslint-plugin-react": "^2.5.0",
     "jsx-loader": "^0.13.2",
     "karma": "^0.12.36",
     "mocha": "^2.2.5",
