--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
+    "babel": "^5.5.4",
     "babel-core": "^5.5.3",
     "babel-eslint": "^3.1.13",
     "babel-loader": "^5.1.4",
     "chai": "^3.0.0",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
+    "jsdom": "^3.1.2",
+    "json-loader": "^0.5.2",
     "jsx-loader": "^0.13.2",
     "karma": "^0.12.36",
     "karma-chai": "^0.1.0",
