--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "karma-sinon": "^1.0.4",
     "karma-webpack": "^1.5.1",
     "mocha": "^2.2.5",
+    "node-sass": "^3.1.2",
     "react-hot-loader": "^1.2.7",
+    "sass-loader": "^1.0.2",
     "sinon": "^1.14.1",
+    "style-loader": "^0.12.3",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   },
