--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-eslint": "^3.1.13",
     "babel-loader": "^5.1.4",
     "chai": "^3.0.0",
+    "css-loader": "^0.14.4",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
     "jsdom": "^3.1.2",
