--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "simple chat app",
   "main": "src/index.js",
   "dependencies": {
+    "ReconnectingWebSocket": "git+https://gith@github.com/joewalnes/reconnecting-websocket.git",
     "immstruct": "^1.4.1",
     "omniscient": "^3.1.0",
     "react": "^0.13.3"
