--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awsomechat",
+  "name": "awesomechat",
   "version": "0.1.0",
   "description": "simple chat app",
   "main": "src/index.js",
@@ -19,7 +19,6 @@
     "css-loader": "^0.14.4",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
-    "jsdom": "^3.1.2",
     "json-loader": "^0.5.2",
     "jsx-loader": "^0.13.2",
     "karma": "^0.12.36",
